--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image" href="/src/assets/Image/Untitled.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,400;8..144,700&display=swap"
+    rel="stylesheet">
+
+  <link href="/src/styles.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Best POS Systems for Nail Salons | Credit Card Processing & Marketing Solutions | Pos solutions</title>
 </head>
